# python-para-pesquisa-academica

./: .gitignore  Makefile  README.md  extract_python_code.py  extraction_summary.md  fix_examples.py  fix_execution_errors.py  fix_indentation.py  fix_specific_errors.py  main.py  main.tex  political_tweets.csv  pyproject.toml  sequences.fasta  test_examples.py  test_execution.py  verify_extraction.py  verify_sync.py
chapter/: chapter1.tex  chapter10.tex  chapter11.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter8.tex  chapter9.tex
codigo_ebook/chapter01/: example_01.py  example_02.py  example_03.py
codigo_ebook/chapter03/: example_01.py  example_02.py  example_03.py  example_04.py  example_05.py  example_06.py  example_07.py  example_08.py  example_09.py  example_10.py  example_11.py  example_12.py  example_13.py  example_14.py  example_15.py  example_16.py  example_17.py  example_18.py  example_19.py  example_20.py  example_21.py  example_22.py  example_23.py  example_24.py  example_25.py  example_26.py  example_27.py  example_28.py  example_29.py
codigo_ebook/chapter04/: example_01.py  example_02.py  example_03.py  example_04.py  example_05.py  example_06.py  example_07.py  example_08.py  example_09.py  example_10.py  example_11.py  example_12.py  example_13.py  example_14.py  example_15.py  example_16.py  example_17.py  example_18.py  example_19.py  example_20.py  example_21.py  example_22.py  example_23.py  example_24.py  example_25.py  example_26.py  (+8 more)
frontmatter/: preface.tex  titlepage.tex
misc/: options.sty
(+173 files in other folders)
